--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -60,10 +60,6 @@
 
 /* info */
 .infobtn,
-#infoOverlay:not( input textarea ) {
-	user-select: none;
-}
-.infobtn,
 #infoOverlay input[type=radio],
 #infoOverlay input[type=checkbox] {
 									  /* w    h       x   y   inner(color)       w    outer(color)      w */
@@ -129,6 +125,8 @@ hr {
 	scrollbar-width: none;
 	-ms-overflow-style: none;
 	-webkit-overflow-scrolling: touch;
+	user-select: none;
+	-webkit-user-select: none;
 }
 #infoOverlay .fa {
 	vertical-align: -1px;
