--- a/srv/http/assets/css/keyboard.css
+++ b/srv/http/assets/css/keyboard.css
@@ -10,10 +10,8 @@
 	box-shadow: 0 0 10px 4px #000000;
 	z-index: 108; /* #banner > #loader > # #keyboard > #infoOverlay */
 	-webkit-touch-callout: none; /* iOS Safari */
+	user-select: none;
 	-webkit-user-select: none;   /* Safari */
-	-moz-user-select: none;      /* Firefox */
-	-ms-user-select: none;       /* Internet Explorer and Edge */
-	user-select: none;           /* Non-prefixed version, currently supported by Chrome and Opera */
 }
 .simple-keyboard {
 /*	max-width: 560px;*/
