--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -288,6 +288,9 @@ hr {
 	height: 100px;
 	margin-bottom: 10px;
 }
+.infomessage .msg-l img {
+	margin-bottom: 0;
+}
 .infomessage .msg-l,
 .infomessage .msg-r {
 	display: inline-block;
