--- a/srv/http/assets/css/colors.css
+++ b/srv/http/assets/css/colors.css
@@ -14,13 +14,13 @@
 	--cgd:  hsl(200,3%,10%);   /* gray-dark */
 }
 
-bl, blb, .bl {
+bl, .bl {
 	color: var( --cm ) !important
 }
 bll {
 	color: var( --cml ) !important;
 }
-gr, grl, grw, .gr, .grl {
+gr, .gr {
 	color: var( --cg60 ) !important
 }
 grn, .grn {
