--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -454,10 +454,6 @@ i.map.disabled, .map.disabled i {
 	margin-top: 20px;
 	width: 100%;
 }
-.coverlarge {
-	width: 55% !important;
-	margin: 0 20px;
-}
 .coversmall {
 	width: auto !important;
 	height: auto !important;
@@ -468,9 +464,6 @@ i.map.disabled, .map.disabled i {
 	bottom: 0;
 	left: 0;
 	right: 0;
-}
-.knobsmall {
-	min-width: 230px;
 }
 #time-knob {
 	order: 1;
@@ -2213,8 +2206,7 @@ li.active .li2 bl {
 	}
 	@media ( max-width: 540px ) {
 		#playback-row { margin-top: 20px }
-		#coverart-block,
-		.coverlarge { width: 100% !important }
+		#coverart-block { width: 100% !important }
 		#coverart-block,
 		#divcover { max-width: 100vw !important }
 	}
