--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -411,13 +411,7 @@ i.map.disabled, .map.disabled i {
 #playback-row {
 	display: flex;
 	flex-flow: row wrap;
-	align-items: center;
 	justify-content: center;
-	display: -webkit-flex;
-	-webkit-flex-direction: row;
-	-webkit-flex-wrap: wrap;
-	-webkit-align-items: center;
-	-webkit-justify-content: center;
 	margin: 30px auto 0;
 	padding: 0;
 	min-width: 100%;
@@ -2142,11 +2136,8 @@ li.active .li2 bl {
 	@media ( max-width: 749px ) {
 		#time-knob,
 		#volume-knob { width: 40% }
-		#coverart-block {
-			width: 50%;
-			margin: -40px 0 20px 0;
-		}
-		#volume-knob { margin-bottom: 70px }
+		#coverart-block { width: 50% }
+		#volume-knob { margin: 20px 0 70px 0 }
 	}
 	@media ( max-width: 735px ) {
 		.title { display: none }
@@ -2164,10 +2155,8 @@ li.active .li2 bl {
 		#vol-group	{ width: 100% }
 		#coverart-block,
 		#volume-knob { width: auto }
-		#coverart-block {
-			display: block;
-			margin: 0 0 20px 0;
-		}
+		#coverart-block,
+		#divcover { max-width: 100vw }
 	}
 	@media ( max-width: 480px ) {
 		#playback-controls i { margin: 0 5px }
