--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -2133,6 +2133,9 @@ li.active .li2 bl {
 	@media ( max-width: 1200px ) {
 		#playback-row { max-width: 100vw }
 	}
+	@media ( max-width: 900px ) {
+		#coverart-block { max-width: 55vw }
+	}
 	@media ( max-width: 749px ) {
 		#time-knob,
 		#volume-knob { width: 40% }
@@ -2144,6 +2147,9 @@ li.active .li2 bl {
 	}
 	@media ( max-width: 700px ) {
 		.liinfo { display: none }
+	}
+	@media ( max-width: 560px ) {
+		#coverart-block { max-width: 50vw }
 	}
 	@media ( max-width: 500px ) {
 		#page-playback { padding-top: 60px }
