--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -547,6 +547,9 @@ input:checked + .switchlabel.disabled:after {
 	color: var( --cm );
 }
 @media (max-height: 570px) {
+	#help {
+		margin-right: 0;
+	}
 	#help::before {
 		content: '\f509';
 	}
