--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -2030,6 +2030,11 @@ li.active .li2 bl {
 	#play-group,
 	#vol-group { display: none }
 }
+@media ( min-width: 900px ) {
+	#playback-row {
+		align-items: center;
+	}
+}
 @media ( max-width: 700px ) {
 	#sampling .radio { display: inline }
 	#sampling .station { display: none }
