--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -2008,7 +2008,14 @@ li.active .li2 bl {
 	line-height: 34px;
 	background-color: var( --cm );
 }
-
+/************************************************************************************/
+@media ( min-width: 900px ) {
+	#playback-row { align-items: center }
+}
+@media (min-width: 2038px) {
+	.coverart { width: 200px }
+}
+/************************************************************************************/
 @media ( max-height: 768px ) {
 	#page-playback { padding: 80px 0 60px }
 }
@@ -2030,11 +2037,7 @@ li.active .li2 bl {
 	#play-group,
 	#vol-group { display: none }
 }
-@media ( min-width: 900px ) {
-	#playback-row {
-		align-items: center;
-	}
-}
+/************************************************************************************/
 @media ( max-width: 700px ) {
 	#sampling .radio { display: inline }
 	#sampling .station { display: none }
@@ -2045,9 +2048,7 @@ li.active .li2 bl {
 	#pl-count,
 	#pl-path { display: none }
 }
-
-@media (min-width: 2038px) { .coverart { width: 200px } }
-
+/************************************************************************************/
 @media (max-width: 2038px) { .coverart, .lib-mode { width: calc( 100% / 10 ) } }
 @media (max-width: 1838px) { .coverart, .lib-mode { width: calc( 100% / 9 ) } }
 @media (max-width: 1638px) { .coverart, .lib-mode { width: calc( 100% / 8 ) } }
@@ -2062,9 +2063,8 @@ li.active .li2 bl {
 @media (max-width: 540px)  { .lib-mode { width: calc( 100% / 4 ) } }
 @media (max-width: 440px)  { .lib-mode { width: calc( 100% / 3 ) } }
 @media (max-width: 340px)  { .mode gr { display: none } }
-
+/************************************************************************************/
 @media ( orientation: landscape ) {
-	#coverart-block, #divcover { max-width: 50vh }
 	@media ( max-height: 540px ) {
 		#page-playback { padding: 40px 0 !important; }
 		#page-playback.barsalways { padding: 60px 0 60px !important }
@@ -2107,7 +2107,6 @@ li.active .li2 bl {
 		#bar-bottom,
 		#page-playback { padding-top: 20px !important }
 	}
-
 	@media ( max-width: 768px ) { #page-playback { --scale: 0.95 } }
 	@media ( max-width: 700px ) { #page-playback { --scale: 0.9 } }
 	@media ( max-width: 670px ) { #page-playback { --scale: 0.85 } }
@@ -2115,7 +2114,8 @@ li.active .li2 bl {
 	@media ( max-width: 590px ) { #page-playback { --scale: 0.75 } }
 	@media ( max-width: 550px ) { #page-playback { --scale: 0.7 } }
 	@media ( max-width: 510px ) { #page-playback { --scale: 0.65 } }
-	
+/*----------------------------------------------------------------------------------*/
+	#coverart-block, #divcover { max-width: 50vh }
 	@media ( max-height: 767px ) {
 		.licover { position: relative }
 		#lib-list li.track1 { margin-top: 0 }
@@ -2137,7 +2137,7 @@ li.active .li2 bl {
 		#vol-group { display: none }
 	}
 }
-
+/************************************************************************************/
 @media ( orientation: portrait ) {
 	@media ( max-width: 1200px ) {
 		#playback-row { max-width: 100vw }
@@ -2146,6 +2146,7 @@ li.active .li2 bl {
 		#coverart-block { max-width: 55vw }
 	}
 	@media ( max-width: 749px ) {
+		#playback-row { align-items: center }
 		#time-knob,
 		#volume-knob { width: 40% }
 		#coverart-block { width: 50% }
@@ -2223,6 +2224,7 @@ li.active .li2 bl {
 	}
 }
 /* 3.5" lcd */
+/************************************************************************************/
 @media ( max-width: 320px ) and ( max-height: 480px ) {
 	#page-playback {
 		padding-top: 30px !important;
