--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -132,6 +132,9 @@ hr {
 	height: 40px;
 	text-decoration: none;
 }
+#infoOverlay code {
+	color: var( --cw );
+}
 #infoBox {
 	width: 400px;
 	max-width: 98%;
@@ -403,111 +406,6 @@ hr {
 #infoButtons {
 	padding-top: 10px;
 }
-#infoContent .selectric-wrapper {
-	margin: 0;
-}
-#infoOverlay code,
-#infoContent .selectric-items ul {
-	color: var( --cw );
-}
-#infoContent .selectric {
-	border-radius: 3px;
-}
-#infoContent .selectric,
-#infoContent .selectric .label,
-#infoContent .selectric-items li {
-	height: 34px;
-	text-align: left;
-	line-height: 16px;
-}
-#infoContent .selectric-items {
-	min-width: 100%;
-}
-#infoContent .selectric .label {
-	margin: 1px 0;
-	padding: 0 10px;
-}
-#infoContent .selectric .label,
-#infoContent .selectric .button {
-	line-height: 34px;
-}
-#infoRange input {
-	height: 40px;
-	width: 300px;
-	margin: 0;
-	max-width: 70%;
-	background: transparent;
-	-webkit-appearance: none;
-	cursor: pointer;
-}
-#infoRange input::-webkit-slider-thumb {
-	height: 40px;
-	width: 40px;
-	margin-top: -20px;
-	border: none;
-	border-radius: 4px;
-	background:         radial-gradient( 225% 90% at 100% 0%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
-	background: -webkit-radial-gradient( 100% 0%, 225% 90%,   hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
-	background-color: var( --cm );
-	-webkit-appearance: none;
-	box-shadow: -2px 2px 4px #000000;
-}
-#infoRange input::-moz-range-thumb {
-	height: 40px;
-	width: 40px;
-	border: none;
-	border-radius: 4px;
-	background:         radial-gradient( 225% 90% at 100% 0%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
-	background: -webkit-radial-gradient( 100% 0%, 225% 90%,   hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
-	background-color: var( --cm );
-	box-shadow: -2px 2px 4px #000000;
-}
-#infoRange input:disabled::-webkit-slider-thumb {
-	background-color: var( --cmd );
-}
-#infoRange input:disabled::-moz-range-thumb {
-	background-color: var( --cmd );
-}
-#infoRange input::-webkit-slider-runnable-track {
-	width: 100%;
-	height: 3px;
-	transition : all 2s;
-	border-radius: 0px;
-	background: #000000;
-}
-#infoRange input:focus::-webkit-slider-runnable-track {
-	background: #000000;
-}
-#infoRange input::-moz-range-track {
-	width: 100%;
-	height: 3px;
-	transition : all 2s;
-	background: #000000;
-	border-radius: 0px;
-}
-#infoRange .value {
-	height: 30px;
-	font-size: 18px;
-	font-weight: 300;
-	text-align: center;
-}
-#infoRange .min,
-#infoRange .max {
-	position: relative;
-	display: inline-block;
-	width: 40px;
-	padding: 0 10px;
-	vertical-align: 16px;
-	text-align: right;
-	color: var( --cg60 );
-	cursor: pointer;
-}
-#infoRange .max {
-	text-align: left;
-}
-#infoRange {
-	text-align: center;
-}
 #infoOverlay code {
 	display: inline-block;
 	padding: 3px;
@@ -555,7 +453,7 @@ hr {
 	#infoX:active {
 		color: var( --cma );
 	}
-	input:focus,
+	input:not( [type=range] ):focus,
 	.infobtn.active {
 		box-shadow: 0 0 3px 1px var( --cg75 ) !important;
 
