--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -154,7 +154,8 @@
 	z-index: 10;
 }
 #eqsave { margin-right: 10px }
-#eqnew { margin-left: 10px }
+#eqnew,
+#eqcancel { margin-left: 10px }
 #infoRange.disabled,
 .ibtn.disabled {
 	pointer-events: none;
