--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -344,7 +344,7 @@ hr {
 	margin: 0 !important;
 	width: 230px;
 	height: 36px !important;
-	padding: 10px;
+	padding: 10px 9px;
 	color: var( --cw );
 	background-color: #000000;
 	border-radius: 5px;
