--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -144,8 +144,7 @@
 #eq .ibtn {
 	width: 35px;
 	font-size: 24px;
-	line-height: 36px;
-	vertical-align: middle;
+	vertical-align: bottom;
 	cursor: pointer;
 }
 #eq .ibtn,
