--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -120,7 +120,7 @@ i.map.disabled, .map.disabled i {
 .menu i {
 	width: 40px;
 	line-height: 40px;
-	vertical-align: -3px;
+	vertical-align: bottom;
 	text-align: center;
 	font-size: 22px;
 	color: var( --cw );
