--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -54,6 +54,169 @@
 #banner .li2 {
 	font-size: 13px;
 }
+/* range slider */
+#infoContent .selectric-wrapper {
+	margin: 0;
+}
+#infoContent .selectric-items ul {
+	color: var( --cw );
+}
+#infoContent .selectric {
+	border-radius: 3px;
+}
+#infoContent .selectric,
+#infoContent .selectric .label,
+#infoContent .selectric-items li {
+	height: 35px;
+	text-align: left;
+	line-height: 16px;
+}
+#infoContent .selectric-items {
+	min-width: 100%;
+}
+#infoContent .selectric .label {
+	margin: 1px 0;
+	padding: 0 10px;
+}
+#infoContent .selectric .label,
+#infoContent .selectric .button {
+	line-height: 34px;
+	color: var( --cw );
+}
+#infoRange input {
+	height: 40px;
+	width: 300px;
+	margin: 0;
+	max-width: 70%;
+	background: transparent;
+	-webkit-appearance: none;
+	cursor: pointer;
+}
+#infoRange input::-webkit-slider-thumb {
+	height: 40px;
+	width: 40px;
+	margin-top: -20px;
+	border: none;
+	border-radius: 4px;
+	background:         radial-gradient( 225% 90% at 100% 0%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
+	background: -webkit-radial-gradient( 100% 0%, 225% 90%,   hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
+	background-color: var( --cm );
+	-webkit-appearance: none;
+	box-shadow: -2px 2px 4px #000000;
+}
+#infoRange input::-moz-range-thumb { /* cannot be combined */
+	height: 40px;
+	width: 40px;
+	border: none;
+	border-radius: 4px;
+	background:         radial-gradient( 225% 90% at 100% 0%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
+	background: -webkit-radial-gradient( 100% 0%, 225% 90%,   hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
+	background-color: var( --cm );
+	box-shadow: -2px 2px 4px #000000;
+}
+#infoRange input:disabled::-webkit-slider-thumb {
+	background-color: var( --cmd );
+}
+#infoRange input:disabled::-moz-range-thumb {
+	background-color: var( --cmd );
+}
+#infoRange input::-webkit-slider-runnable-track {
+	width: 100%;
+	height: 3px;
+	transition : all 2s;
+	border-radius: 0px;
+	background: #000000;
+}
+#infoRange input:focus::-webkit-slider-runnable-track {
+	background: #000000;
+}
+#infoRange input::-moz-range-track {
+	width: 100%;
+	height: 3px;
+	transition : all 2s;
+	background: #000000;
+	border-radius: 0px;
+}
+#infoRange .value {
+	height: 30px;
+	font-size: 18px;
+	font-weight: 300;
+	text-align: center;
+}
+#infoRange .min,
+#infoRange .max {
+	position: relative;
+	display: inline-block;
+	width: 40px;
+	padding: 0 10px;
+	vertical-align: 16px;
+	text-align: right;
+	color: var( --cg60 );
+	cursor: pointer;
+}
+#infoRange .max {
+	text-align: left;
+}
+#infoRange {
+	text-align: center;
+}
+/* equalizer */
+.infomessage .hz {
+	white-space: nowrap;
+}
+.infomessage .hz a {
+	display: inline-block;
+	width: 50px;
+	height: 30px;
+	color: var( --cw );
+	text-align: center;
+	font-family: Inconsolata;
+}
+#eqflatline {
+	position: absolute;
+	margin: 155px 10px;
+	width: 510px;
+	height: 1px;
+	background: var( --cgl );
+}
+#infoRange.vertical {
+	margin-left: -50px;
+	width: 400px;
+	height: 270px;
+	transform : rotateZ( -90deg );
+	z-index: 0;
+}
+#infoRange.vertical input {
+	display: block;
+	position: relative;
+	height: 50px;
+	right: -70px;
+}
+#infoRange.vertical input::-webkit-slider-thumb {
+	margin-top: -18px;
+	transform : rotateZ( 90deg );
+}
+#infoRange.vertical input::-moz-range-thumb {
+	transform : rotateZ( 90deg );
+}
+#eq .ibtn {
+	width: 50px;
+	font-size: 24px;
+	vertical-align: bottom !important;
+	cursor: pointer;
+}
+#eq .ibtn,
+#eqname {
+	position: relative;
+}
+#eqsave { margin-right: 5px }
+#eqnew,
+#eqcancel { margin-left: 5px }
+#infoRange.disabled,
+.ibtn.disabled {
+	pointer-events: none;
+	color: var( --cg60 );
+}
 
 /* info */
 .infobtn,
