--- a/srv/http/assets/css/common.css
+++ b/srv/http/assets/css/common.css
@@ -1,3 +1,4 @@
+#guide { user-select: none }
 html {
 	height: 100%;
 	padding: env( safe-area-inset ); /* disable iPhone X rounded corner padding */
