--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -311,6 +311,9 @@ hr {
 .infobtn {
 	text-shadow: -1px 1px 2px #000000;
 }
+#infoContent .bklabel {
+	height: auto;
+}
 #infoTopBg {
 	width: 100%;
 	height: 40px;
