--- a/srv/http/assets/css/common.css
+++ b/srv/http/assets/css/common.css
@@ -29,6 +29,7 @@ html {
 	padding: env( safe-area-inset ); /* disable iPhone X rounded corner padding */
 }
 body {
+	height: 100%;
 	margin: 0;
 	font-family: "Lato";
 	font-size: 15px;
