--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1,3 +1,144 @@
+/* equalizer */
+#eq { height: 375px }
+#eq .hz.full { display: block }
+#eq .hz.narrow { display: none }
+#eq .hz a {
+	display: inline-block;
+	width: 50px;
+	height: 30px;
+	color: var( --cw );
+	text-align: center;
+	font-family: Inconsolata;
+}
+#eqflatline {
+	position: absolute;
+	margin: 157px 0;
+	width: 530px;
+	max-width: 95%;
+	height: 1px;
+	background: var( --cgl );
+}
+#infoRange.vertical {
+	position: relative;
+	width: 300px;
+	top: -100px;
+	margin: 0 auto;
+	transform : rotateZ( -90deg );
+	z-index: 0;
+}
+#infoRange.vertical input {
+	display: block;
+	position: relative;
+	height: 50px;
+	max-width: 100%;
+}
+#eq .selectric-wrapper,
+#eq .selectric,
+#eq .selectric-items { width: 180px }
+#infoRange.vertical input::-webkit-slider-thumb {
+	margin-top: -18px;
+	transform : rotateZ( 90deg );
+}
+#infoRange.vertical input::-moz-range-thumb {
+	transform : rotateZ( 90deg );
+}
+#eq .bottom {
+	position: relative;
+	top: -185px;
+}
+#eq .ibtn {
+	width: 45px;
+	font-size: 24px;
+	vertical-align: bottom !important;
+	cursor: pointer;
+}
+#eq .ibtn,
+#eqname {
+	position: relative;
+}
+#eqsave { margin-right: 10px }
+#eqnew,
+#eqcancel { margin-left: 10px }
+#infoRange.disabled,
+.ibtn.disabled {
+	pointer-events: none;
+	color: var( --cg60 );
+}
+@media ( max-width: 420px ) {
+	#infoRange.vertical { top: -50px }
+	#eq .hz.full { display: none }
+	#eq .hz.narrow {
+		display: block;
+		margin-left: -2px;
+		white-space: nowrap;
+	}
+	#eq .hz a { width: 40px }
+	#infoRange.vertical input { height: 40px }
+	#infoRange input::-webkit-slider-thumb { width: 33px; }
+	#infoRange input::-moz-range-thumb { width: 33px; }
+	#eq .selectric-wrapper,
+	#eq .selectric,
+	#eq .selectric-items { width: 160px }
+	#eq .bottom { top: -85px }
+	#eq .ibtn { width: 35px }
+}
+@media ( max-width: 380px ) {
+	#infoRange.vertical { top: -25px }
+	#eq .hz.narrow { margin-left: 0 }
+	#eq .hz a { width: 35px }
+	#infoRange.vertical input { height: 35px }
+	#infoRange input::-webkit-slider-thumb { width: 28px; }
+	#infoRange input::-moz-range-thumb { width: 28px; }
+	#eq .bottom { top: -35px }
+	#eq .ibtn { width: 30px }
+}
+@media ( max-width: 320px ) {
+	#infoRange.vertical { top: -10px }
+	#eq .hz a { width: 32px }
+	#infoRange.vertical input { height: 32px }
+	#infoRange input::-webkit-slider-thumb { width: 25px; }
+	#infoRange input::-moz-range-thumb { width: 25px; }
+	#eq .bottom { top: -5px }
+}
+@media ( max-height: 420px ) {
+	#eq { height: 280px }
+	#eqflatline { margin-top: 117px }
+	#infoRange.vertical {
+		top: -150px;
+		width: 200px;
+	}
+	#eq .bottom { top: -285px }
+}
+@media ( max-height: 320px ) and ( max-width: 570px ) {
+	#eq { height: 225px }
+	#eqflatline { margin-top: 97px }
+	#infoRange.vertical {
+		top: -175px;
+		width: 160px;
+	}
+	#eq .hz { white-space: unset }
+	#eq .hz a { width: 50px }
+	#infoRange.vertical input { height: 50px }
+	#infoRange input::-webkit-slider-thumb { width: 40px; }
+	#infoRange input::-moz-range-thumb { width: 40px; }
+	#eq .bottom { top: -337px }
+}
+@media ( max-height: 320px ) and ( max-width: 480px ) {
+	#infoRange.vertical { top: -150px }
+	#eq .hz a { width: 45px }
+	#infoRange.vertical input { height: 45px }
+	#infoRange input::-webkit-slider-thumb { width: 35px; }
+	#infoRange input::-moz-range-thumb { width: 35px; }
+	#eq .bottom { top: -285px }
+}
+
+#infoContent .imgicon {
+	width: 30px !important;
+	margin-right: 5px !important;
+	vertical-align: -10px;
+	border: none;
+}
+
 img {
 	-webkit-touch-callout: none;
 }
@@ -347,15 +488,6 @@ i.map.disabled, .map.disabled i {
 }
 .capitalize {
 	text-transform: capitalize;
-}
-#infoOverlay.noscroll { /* for volume input range */
-	height: 100%;
-}
-#infoContent .imgicon {
-	width: 30px !important;
-	margin-right: 5px !important;
-	vertical-align: -10px;
-	border: none;
 }
 #infoicon {
 	height: 25px;
@@ -2216,7 +2348,6 @@ li.active .li2 bl {
 			width: calc( 100% / 0.9 );
 			left: calc( -100% / 18 );
 		}
-		#infoOverlay.noscroll { height: calc( 100% / 0.9 ) }
 		.radiomodetitle { display: none; }
 	}
 	@media ( max-width: 280px ) {
