--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -532,6 +532,14 @@ hr {
 	#infoContent { padding: 25px 5px 10px 5px }
 	.infofooter { padding: 0 5px }
 }
+@media ( max-width: 330px ) {
+	#infoOverlay {
+		transform:  translateY(2.5%) scale( 0.9 );
+		transform-origin: top;
+		width: calc( 100% / 0.9 );
+		left: calc( -100% / 18 );
+	}
+}
 /* iOS */
 @media not all and ( min-resolution:.001dpcm ) {
 	@supports (-webkit-appearance:none) and (stroke-color:transparent) {
