--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -534,7 +534,7 @@ hr {
 }
 @media ( max-width: 330px ) {
 	#infoOverlay {
-		transform:  translateY(2.5%) scale( 0.9 );
+		transform: scale( 0.9 ) translateY(2.5%);
 		transform-origin: top;
 		width: calc( 100% / 0.9 );
 		left: calc( -100% / 18 );
