--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -66,7 +66,7 @@ a:hover {
 	color: var( --cml );
 	text-decoration: none !important;
 }
-input[type="text"] {
+.container input[type="text"] {
 	width: 100%;
 	max-width: 230px;
 	height: 40px;
