--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1,60 +1,66 @@
 /* equalizer */
+#eq {
+	--eqw: 300px;
+	--eqb: 50px;
+}
+#eq .line,
+#eq .bottom {
+	position: absolute;
+	width: calc( 100% - 20px );
+}
 /*
 H = .vertical input - height x 10
 W = .vertical - width
+range 100-0 : range width - button width
 #eq       - height     = 25 + W + 40
-.flatline - margin-top = ( W x 0.4 ) + 5
+.line   - margin-top = 20 + ( ( W - 40 ) x 0.4 )
 .vertical - top        = - ( H - W ) / 2
-.bottom   - top        = - ( H - W + 10 )
+.bottom - margin-top = W + 10
 */
-#eq { height: 365px }
-#eq .flatline { margin-top: 125px }
-#infoRange.vertical { top: -100px }
-#eq .bottom { top: -190px; }
+#eq { height: calc( var( --eqw ) + 65px ) }
+#eq .hz a { width: var( --eqb ) }
+#eq .line { margin-top: calc( 20px + ( var( --eqw ) - 40px ) * 0.4 ) }
+#eq .vertical { top: calc( ( var( --eqw ) - var( --eqb ) * 10 ) / 2 ) }
+#eq input { height: var( --eqb ) }
+#eq .bottom { margin-top: calc( var( --eqw ) + 10px ) }
+#eq .ibtn { width: var( --eqb ) }
 	
 #eq .hz.full { display: block }
 #eq .hz.narrow { display: none }
 #eq .hz a {
 	display: inline-block;
-	top: -100px;
-	width: 50px;
 	height: 25px;
 	color: var( --cw );
 	text-align: center;
 	font-family: Inconsolata;
 }
-#eq .flatline {
-	position: absolute;
-	width: calc( 100% - 20px );
+#eq .line {
 	height: 1px;
 	background: var( --cgl );
 }
-#infoRange.vertical {
+#eq .vertical {
 	position: relative;
-	width: 300px;
+	width: var( --eqw );
 	margin: 0 auto;
 	transform : rotateZ( -90deg );
 	z-index: 0;
 }
-#eq .bottom { position: relative }
-#infoRange.vertical input {
+#eq input {
 	display: block;
 	position: relative;
-	height: 50px;
 	max-width: 100%;
 }
 #eq .selectric-wrapper,
 #eq .selectric,
 #eq .selectric-items { width: 180px }
-#infoRange.vertical input::-webkit-slider-thumb {
+#eq input::-webkit-slider-thumb {
 	margin-top: -18px;
 	transform : rotateZ( 90deg );
 }
-#infoRange.vertical input::-moz-range-thumb {
+#eq input::-moz-range-thumb {
 	transform : rotateZ( 90deg );
 }
 #eq .ibtn {
-	width: 45px;
 	font-size: 24px;
 	vertical-align: bottom !important;
 	cursor: pointer;
@@ -66,81 +72,48 @@ W = .vertical - width
 #eqsave { margin-right: 10px }
 #eqnew,
 #eqcancel { margin-left: 10px }
-#infoRange.disabled,
+#eq .disabled,
 .ibtn.disabled {
 	pointer-events: none;
 	color: var( --cg60 );
 }
+@media ( max-height: 420px ) {
+	#eq { --eqw: 240px }
+	#eq .line { width: calc( 100% - 10px ) }
+}
+@media ( max-height: 380px ) {
+	#eq { --eqw: 200px }
+}
+@media ( max-width: 480px ) {
+	#eq input::-webkit-slider-thumb { width: calc( var( --eqb ) - 8px ) }
+	#eq input::-moz-range-thumb { width: calc( var( --eqb ) - 8px ) }
+}
 @media ( max-width: 420px ) {
-	#infoRange.vertical { top: -40px }
-	#eq .bottom { top: -70px }
+	#eq { --eqb: 38px }
 	#eq .hz.full { display: none }
 	#eq .hz.narrow {
 		display: block;
-		margin-left: -2px;
 		white-space: nowrap;
 	}
-	#eq .hz a { width: 38px }
-	#eq .flatline { width: calc( 100% - 10px ) }
-	#infoRange.vertical input { height: 38px }
-	#infoRange input::-webkit-slider-thumb { width: 30px }
-	#infoRange input::-moz-range-thumb { width: 30px }
+	#eq .line { width: calc( 100% - 10px ) }
 	#eq .selectric-wrapper,
 	#eq .selectric,
 	#eq .selectric-items { width: 160px }
-	#eq .ibtn { width: 35px }
 }
 @media ( max-width: 380px ) {
-	#infoRange.vertical { top: -25px }
-	#eq .bottom { top: -40px }
-	#eq .hz.narrow { margin-left: 0 }
-	#eq .hz a { width: 35px }
-	#infoRange.vertical input { height: 35px }
-	#infoRange input::-webkit-slider-thumb { width: 27px }
-	#infoRange input::-moz-range-thumb { width: 27px }
-	#eq .ibtn { width: 30px }
+	#eq { --eqb: 35px }
 }
 @media ( max-width: 320px ) {
-	#infoRange.vertical { top: -10px }
-	#eq .bottom { top: -10px }
-	#eq .hz a { width: 32px }
-	#infoRange.vertical input { height: 32px }
-	#infoRange input::-webkit-slider-thumb { width: 25px }
-	#infoRange input::-moz-range-thumb { width: 25px }
+	#eq { --eqb: 34px }
+	#eqsave { margin-right: 5px }
+	#eqnew { margin-left: 5px }
 }
-@media ( max-height: 420px ) {
-	#eq { height: 265px }
-	#eq .flatline {
-		margin-top: 85px;
-		width: calc( 100% - 10px );
-	}
-	#infoRange.vertical {
-		top: -150px;
-		width: 200px;
-	}
-	#eq .bottom { top: -290px }
-}
+
 @media ( max-height: 320px ) and ( max-width: 570px ) {
-	#eq { height: 225px }
-	#eq .flatline { margin-top: 67px }
-	#infoRange.vertical {
-		top: -170px;
-		width: 160px;
-	}
-	#eq .hz { white-space: unset }
-	#eq .hz a { width: 50px }
-	#infoRange.vertical input { height: 50px }
-	#infoRange input::-webkit-slider-thumb { width: 40px }
-	#infoRange input::-moz-range-thumb { width: 40px }
-	#eq .bottom { top: -330px }
+	#eq { --eqw: 160px }
 }
 @media ( max-height: 320px ) and ( max-width: 480px ) {
-	#infoRange.vertical { top: -145px }
-	#eq .bottom { top: -280px }
-	#eq .hz a { width: 45px }
-	#infoRange.vertical input { height: 45px }
-	#infoRange input::-webkit-slider-thumb { width: 35px }
-	#infoRange input::-moz-range-thumb { width: 35px }
+	#eq { --eqb: 44px }
 }
 
 #infoContent .imgicon {
